--- a/src/app/post-page/post-page.component.html
+++ b/src/app/post-page/post-page.component.html
@@ -1,1 +1,20 @@
-<p>post-page works!</p>
+<div class="post">
+  <div class="header">
+    <h1>Post title</h1>
+
+    <button routerLink="" class="btn btn-link">На главную</button>
+  </div>
+
+  <div class="info">
+    <strong>Автор поста</strong>
+    <small>05.12.2023</small>
+  </div>
+
+  <div>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias in odit voluptatibus! Accusamus aut distinctio dolore, dolorem esse ex, exercitationem laudantium maxime modi odit repudiandae sequi sunt totam vero voluptate.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias in odit voluptatibus! Accusamus aut distinctio dolore, dolorem esse ex, exercitationem laudantium maxime modi odit repudiandae sequi sunt totam vero voluptate.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias in odit voluptatibus! Accusamus aut distinctio dolore, dolorem esse ex, exercitationem laudantium maxime modi odit repudiandae sequi sunt totam vero voluptate.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias in odit voluptatibus! Accusamus aut distinctio dolore, dolorem esse ex, exercitationem laudantium maxime modi odit repudiandae sequi sunt totam vero voluptate.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias in odit voluptatibus! Accusamus aut distinctio dolore, dolorem esse ex, exercitationem laudantium maxime modi odit repudiandae sequi sunt totam vero voluptate.</p>
+  </div>
+</div>
